--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>My Portofolio</title>
-
+    <title>MyPortofolio Candra-Lesmana</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" 
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -40,7 +39,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#about" class="page-scroll">About</a></li>
-                  <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
+                  <li><a href="#portfolio" class="page-scroll">Portofolio</a></li>
                   <li><a href="#contact" class="page-scroll">Contact</a></li>
               </ul>
           </div>
@@ -91,7 +90,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="text-center">Portfolio</h2>
+            <h2 class="text-center">Portofolio</h2>
             <hr>
           </div>
         </div>
@@ -138,33 +137,44 @@
           <div class="col-sm-12">
             <h2 class="text-center">Contact</h2>
             <hr>
-          </div>
-        </div>
 
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <form>
+            <form name="submit-to-google-sheet">
+
+                <div class="alert alert-success alert-dismissible hidden" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Berhasil!</strong> Pesan Anda Berhasil Dikirim
+                  </div>
+
               <div class="form-group">
                 <label for="nama">Nama</label>
-                <input type="text" id="nama" class="form-control" placeholder="masukan nama">
+                <input type="text" name="nama" id="nama" class="form-control" placeholder="masukan nama">
               </div>
   
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="masukan email">
+                <input type="email" name="email" id="email" class="form-control" placeholder="masukan email">
               </div>
   
               <div class="form-group">
                 <label for="telp">No Telepon</label>
-                <input type="tel" id="telp" class="form-control" placeholder="masukan telepon">
+                <input type="tel" name="notelepon" id="telp" class="form-control" placeholder="masukan telepon">
               </div>
   
               <div class="form-group">
                 <label for="pesan">Pesan</label>
-                <textarea class="form-control" rows="10" placeholder="masukan pesan"></textarea>
+                <textarea class="form-control" name="pesan" rows="10" placeholder="masukan pesan"></textarea>
               </div>
-  
-              <button class="btn-success" type="submit" id="kirimPesan">Kirim Pesan</button>
+
+              <div class="progress hidden">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                <span class="sr-only">60% Complete</span>
+                </div>
+              </div>
+
+              <button class="btn-success btn-kirim" type="submit" id="kirimPesan">Kirim Pesan</button>
+
             </form>
           </div>
         </div>
@@ -195,5 +205,22 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script src="js/script.js"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzqzlfrLCbBe4D7kwFLoyzmKLWsY3d40HpWl_51g98rwQO0hrjvvEddDhZLmKgYtUfB/exec'
+      const form = document.forms['submit-to-google-sheet']
+
+      const error = document.querySelector('.alert');
+
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then((response) => {
+           error.classList.toggle('hidden');
+           form.reset();
+          })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
   </body>
 </html>
