--- a/index.html
+++ b/index.html
@@ -4,207 +4,142 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>MyPortofolio Candra-Lesmana</title>
+    <title>Candra Lesmana</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" 
-    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
 
-    <!-- Navbar -->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-
-            <a href="#home" class="navbar-brand page-scroll">Candra Lesmana</a>
-
-          </div>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#about" class="page-scroll">About</a></li>
-                  <li><a href="#portfolio" class="page-scroll">Portofolio</a></li>
-                  <li><a href="#contact" class="page-scroll">Contact</a></li>
-              </ul>
-          </div>
+    <section class="home" id="home">
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <div class="d-flex align-items-center">
+          <img src="img/profile_1.jpg">
         </div>
-    </nav>
-
-    <!-- Akhir Navbar -->
-
-
-    <!-- Jumbotron -->
-
-    <div class="jumbotron text-center">
-      <img src="img/pp.jpg" class="img-circle">
-      <h1>Candra Lesmana</h1>
-      <p>Siswa SMKN 1 Ciamis | Web Developer | Logo Desainer</p>
-    </div>
-
-    <!-- Akhir Jumbotron -->
-
-
-    <!-- About -->
-
-    <section class="about" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">About</h2>
-            <hr>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-5 col-sm-offset-1">
-            <p>Saya Seorang Siswa dari SMKN 1 Ciamis dengan Jurusan PPLG (Pengembangan Perangkat Lunak dan Gim). Berhubungan dengan Jurusan, Saya juga Seorang Web Developer yang Membuat Website ini.</p>
-          </div>
-          <div class="col-sm-5">
-            <p>Selain Web Developer Saya juga Seorang Logo Desainer yang Memberikan Jasa Desain Logo. untuk Melihat Beberapa Desain Logo saya, bisa check di Portfolio atau di Instagram Kami <a href="https://instagram.com/caa_logo">@caa_logo</a></p>
-          </div>
+        <div style="width: 100%;">
+          <p class="judul">Portofolio</p>
+          <p class="name">Candra <br> Lesmana</p>
+          <p class="content">Saya adalah pengembang web dan desainer logo.Mari lihat lebih jauh tentang saya.</p>
         </div>
       </div>
     </section>
 
-    <!-- Akhir About -->
+    <section class="about" id="about">
+      <div class="row justify-content-center m-0 align-items-center" style="overflow: hidden;">
+        <div class="col-md-5 col-12">
+          <div>
+            <h3 class="judul-h3">Tentang Saya</h3>
+            <p>Saya adalah lulusan baru berusia 19 tahun dari salah satu sekolah terfavorit di daerah saya, dengan latar belakang pendidikan yang kuat dan minat yang besar dalam teknologi informasi.</p>
+            <p>Saat ini, saya bekerja di sebuah perusahaan IT, di mana saya memperoleh pengalaman berharga dalam pengembangan web dan teknologi digital.</p>
+            <p>Dalam peran saya sebagai Pengembang Web, saya telah terlibat dalam berbagai proyek yang melibatkan pengembangan aplikasi web modern, baik front-end maupun back-end, serta integrasi sistem.</p>
+            <p>Saya selalu bersemangat untuk terus belajar dan mengembangkan keterampilan saya di dunia IT yang dinamis, dengan fokus pada inovasi, efisiensi, dan kualitas kerja.</p>
+          </div>
+        </div>
+        <div class="col-md-5 col-12">
+          <img class="image-about" src="img/profile_2.png">
+        </div>
+      </div>
+    </section>
 
-
-    <!-- Portfolio -->
+    <section class="skils" id="skills">
+      <div class="row">
+        <div class="col-md-7 col-6 d-flex justify-content-end" style="background-color: #98ad92; height: 600px;">
+          <h3 class="judul-skil">Kemampuan</h3>
+        </div>
+        <div class="col-md-5 col-6 d-flex align-items-center">
+          <ul class="list-skill">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>Laravel</li>
+            <li>ReactJs</li>
+            <li>NestJs</li>
+            <li>Prisma</li>
+            <li>MySQL</li>
+            <li>Adobe Ilustrator</li>
+            <li>Figma</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <section class="portfolio" id="portfolio">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">Portofolio</h2>
-            <hr>
+        <div class="row py-5 justify-content-center justify-content-xl-start align-items-center">
+          <div class="col-lg-12 col-xl-4 col-md-12 col-12">
+            <h1>Project Website Saya</h1>
+            <p>Dalam Project saya ini terdapat beberapa fitur seperti login admin, sistem pencetakan kartu sampai ke absen anggota menggunakan kartu</p>
+          </div>
+          <div class="col-lg-12 col-xl-9 col-md-12 col-12 img-container">
+            <img src="img/portfolio/Capture.PNG" class="rounded img_1" alt="">
+            <img src="img/portfolio/Capture 2.PNG" class="rounded img_2" alt="">
+            <img src="img/portfolio/Capture 3.PNG" class="rounded img_3" alt="">
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/portfolio/1.jpg">
-            </a>
+
+        <div class="row py-5 justify-content-center align-items-center">
+          <div class="col-md-8 d-flex justify-content-center">
+            <img src="img/portfolio/Sakura Mockup.png" alt="">
           </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/portfolio/2.jpg">
-            </a>
-          </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/portfolio/3.png">
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4 col-sm-offset-2">
-            <a href="" class="thumbnail">
-              <img src="img/portfolio/4.jpg">
-            </a>
-          </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/portfolio/5.jpg">
-            </a>
+          <div class="col-md-4">
+            <h1>Desain Logo Saya</h1>
+            <p>Saya membuat logo yang fleksibel dan dapat disesuaikan untuk keperluan di masa mendatang.</p>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Akhir Portfolio -->
-
-
-    <!-- Contact -->
-
-    <section class="contact" id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">Contact</h2>
-            <hr>
-
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <form name="submit-to-google-sheet">
-
-                <div class="alert alert-success alert-dismissible hidden" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Berhasil!</strong> Pesan Anda Berhasil Dikirim
-                  </div>
-
-              <div class="form-group">
-                <label for="nama">Nama</label>
-                <input type="text" name="nama" id="nama" class="form-control" placeholder="masukan nama">
-              </div>
-  
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" class="form-control" placeholder="masukan email">
-              </div>
-  
-              <div class="form-group">
-                <label for="telp">No Telepon</label>
-                <input type="tel" name="notelepon" id="telp" class="form-control" placeholder="masukan telepon">
-              </div>
-  
-              <div class="form-group">
-                <label for="pesan">Pesan</label>
-                <textarea class="form-control" name="pesan" rows="10" placeholder="masukan pesan"></textarea>
-              </div>
-
-              <div class="progress hidden">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                <span class="sr-only">60% Complete</span>
-                </div>
-              </div>
-
-              <button class="btn-success btn-kirim" type="submit" id="kirimPesan">Kirim Pesan</button>
-
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Akhir Contact -->
-
-
-    <!-- Footer -->
 
     <footer>
       <div class="container text-center">
-        <div class="row">
+        <div class="row mb-2">
           <div class="col-sm-12">
-            <p>&copy; 2023 | built by. <a href="https://instagram.com/c.a.ndra2125">Candra Lesmana</a></p>
+            <p class="text-white">&copy; 2024</a></p>
+            <span class="d-flex justify-content-center">
+              <a href="https://github.com/CandraLesmana" class="text-white mx-2" style="text-decoration: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                </svg>
+              </a>
+              <a href="https://www.linkedin.com/in/candra-lesmana-476bb0309/?originalSubdomain=id" class="text-white mx-2" style="text-decoration: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                </svg>
+              </a>
+              <a href="https://www.instagram.com/c.a.ndra2125" class="text-white mx-2" style="text-decoration: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                </svg>
+              </a>
+              <a href="mailto:candralesmana201205@gmail.com" class="text-white mx-2" style="text-decoration: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                </svg>
+              </a>
+              <a href="/file/cv/CV_Candra_Lesmana.pdf" class="text-white mx-2" style="text-decoration: none;" download>
+                <h4>CV</h4>
+              </a>
+            </span>
           </div>
         </div>
       </div>
     </footer>
 
-    <!-- Akhir Footer -->
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.6.3.min.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbzqzlfrLCbBe4D7kwFLoyzmKLWsY3d40HpWl_51g98rwQO0hrjvvEddDhZLmKgYtUfB/exec'
