Update: Portofolio 2024 Part 2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="row py-5 justify-content-center align-items-center">
           <div class="col-md-8 d-flex justify-content-center">
-            <img src="img/portfolio/Sakura Mockup.png" alt="">
+            <img src="img/portfolio/Sakura Mockup.png" style="width: 70vh;" alt="">
           </div>
           <div class="col-md-4">
             <h1>Desain Logo Saya</h1>
